extends Node2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_character_mouse_entered():
	pass # Replace with function body.


func _on_bomber_mouse_entered():
	print("Mouse entered:", self.name)


func _on_defender_mouse_entered():
	print("Mouse entered:", self.name)


func _on_flamethrower_mouse_entered():
	print("Mouse entered:", self.name)


func _on_machinegunner_mouse_entered():
	print("Mouse entered:", self.name)


func _on_pistoleer_mouse_entered():
	print("Mouse entered:", self.name)


func _on_railgunner_mouse_entered():
	print("Mouse entered:", self.name)


func _on_sniper_mouse_exited():
	print("Mouse entered:", self.name)


func _on_mutatedalien_mouse_entered():
	print("Mouse entered:", self.name)


func _on_crawler_mouse_entered():
	print("Mouse entered:", self.name)


func _on_dungbeetle_mouse_entered():
	print("Mouse entered:", self.name)


func _on_grimer_mouse_entered():
	print("Mouse entered:", self.name)


func _on_swarm_mouse_entered():
	print("Mouse entered:", self.name)


func _on_sniper_mouse_entered():
	print("Mouse entered:", self.name)


func _on_alieny_mouse_entered():
	print("Mouse entered:", self.name)
